--- a/_config.yml
+++ b/_config.yml
@@ -14,20 +14,20 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: the pioneer
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: towards the best
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  최고를 향해 공부하고 경험하기
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://ji-ha.github.io"
-# url: ""
+# url: "https://ji-ha.github.io"
+url: ""
 
 github:
-  username: github_username # change to your GitHub username
+  username: ji-ha # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
@@ -99,7 +99,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: /assets/profile.jpeg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
